tests/typechecking/valid/simple_calls.ml
(* Appels en cascade *)
let rec f x = x in
print_int (truncate (f 1.))
